@@ -82,7 +82,6 @@ class Application(object):
         self.configure_zca()
         self.configure_pyramid()
         self.configure_banner()
-        self.configure_series()
         self.configure_navigation()
         self.configure_bugsnag()
 
@@ -99,12 +98,6 @@ class Application(object):
             self.settings.get('vivi_zeit.web_banner-id-mappings', ''))
         zeit.web.core.banner.banner_id_mappings = (
             zeit.web.core.banner.make_banner_id_mappings(banner_id_mappings))
-
-    def configure_series(self):
-        series_source = maybe_convert_egg_url(
-            self.settings.get('vivi_zeit.web_series-source', ''))
-        zeit.web.core.sources.video_series = (
-            zeit.web.core.sources.get_video_series(series_source))
 
     def configure_navigation(self):
         navigation_config = maybe_convert_egg_url(
